# APC_2021

./: README.md
AirSim/: settings.json  settings_comp.json
AirSim/project/airsim_2dnav/: CMakeLists.txt  package.xml
AirSim/project/airsim_2dnav/scripts/: car_control  control_master.py  control_master_KH.py  control_master_simple.py  efficiency.py  goals.py  score.py  test.py  timer.py
AirSim/project/airsim_2dnav/scripts/cpp/: CMakeLists.txt  car_control.cpp  control_master.cpp  control_master_KH.cpp  control_master_ZY.cpp  control_master_simple.cpp  efficiency.cpp  goals.cpp  package.xml  plot_effcpp.py  shell_simulation.launch  timer.cpp
AirSim/project/airsim_2dnav/scripts/old/: car_control_balanced  car_control_fast  car_control_slow
AirSim/project/autonomy/mapping/config/: hdl_graph_slam_hood.launch  settings.json
AirSim/project/autonomy/mapping/scripts/: imuPubilsh.py  lidarReform.py
AirSim/project/shell_simulation/: CMakeLists.txt  package.xml
AirSim/project/shell_simulation/launch/: shell_simulation.launch
AirSim/ros/airsim_ros_pkgs/launch/: airsim_node.launch
AirSim/ros/airsim_ros_pkgs/scripts/: car_control  car_control_comp  car_control_teb  car_control_teb-v2  car_control_teb-v3  test.py
Path Planning/: Astar.py  MapCoord.py  MapOutline.py  Pathplan.py
catkin_ws/airsim_2dnav/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
catkin_ws/airsim_2dnav/launch/: gmapping.launch  move_base.launch
catkin_ws/airsim_2dnav/scripts/: goals.py  goals_teb.py
catkin_ws/airsim_convert/launch/: convert.launch
catkin_ws/airsim_convert/scripts/: synchronizer  tf_broadcaster
catkin_ws/lane_detection/scripts/: lane_detection
log/: latest_list
